--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
     sdk: flutter
   provider: 3.2.0
   intl: ^0.16.1
+  http: ^0.12.0+4
   shared_preferences: ^0.5.6+1
 
   # The following adds the Cupertino Icons font to your application.
