--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   intl: ^0.16.1
   http: ^0.12.0+4
   shared_preferences: ^0.5.6+1
+  video_player: ^0.10.8+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -45,3 +46,4 @@ flutter:
   assets:
     - secrets.json
     - assets/images/trampoline_feathers.jpg
+    - assets/videos/
