--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,10 @@ dependencies:
   http: ^0.12.0+4
   shared_preferences: ^0.5.6+1
   video_player: ^0.10.8+1
+  firebase_core: ^0.4.4+3
+  firebase_storage: ^3.1.5
+  uuid: ^2.0.4
+  file_picker: ^1.6.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -47,3 +51,4 @@ flutter:
     - secrets.json
     - assets/images/trampoline_feathers.jpg
     - assets/videos/
+    - google-services.json
