--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   firebase_storage: ^3.1.5
   uuid: ^2.0.4
   file_picker: ^1.6.2
+  path_provider: ^1.6.5
+  path: 1.6.4
+  camera: ^0.5.7+4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
