--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   path: 1.6.4
   camera: ^0.5.7+4
   sensors: ^0.4.2
+  scrollable_positioned_list: ^0.1.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
